@@ -1,0 +1,8 @@
+<html>
+<head>
+{{ headContent() }}
+</head>
+<body>
+{{ body }}
+</body>
+</html>
